--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,31 @@
-span {
-color: aqua;
-
+body {
+    display: flex;
+    justify-content: center;
 }
 
-input{
-    border-color: blue;
+hr {
+    border: none;
+    background-color:black;
+    height: 2px;
+    margin: 0px;
+}
+
+h1 {
+    margin-bottom: 0px;
+    margin-top: 30px;
 }
 
 .logoIMG {
-    width: 300px;
-    height: 300px;
+    width: 75px;
+    height: 60px;
+    margin-bottom: 2px;
 }
 
-
-#test {
-    border: solid 5px black;
+#header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 600px;
+    justify-content: space-between;
 }
+
