--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,13 @@ h1 {
     height: 326px;
 }
 
+.test{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 260px;
+    height: 326px;
+}
+
 #header {
     display: flex;
     flex-direction: row;
@@ -37,6 +44,62 @@ h1 {
     width: 600px;
     justify-content: space-between;
 }
+
+#croq button{
+    margin-top: 6px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    background-color: white;
+    border:1px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+
+#content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 200px;
+    margin-top: 5px;
+}
+
+#nav button {
+    background-color: white;
+    border: 1.5px solid black;
+    border-radius: 7px;
+}
+
+#croq {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Hide {
+    display: none !important;
+}
+
+.Show{
+    display: inline;
+}
+
+.divShow{
+    display: block;
+}
+
+.Selected{
+    background-color: black;
+}
+
+
 
 @media (max-width: 1170px) {
     body {
