--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 200px;
+    width: 250px;
     margin-top: 5px;
 }
 
@@ -112,6 +112,46 @@ h1 {
     height: 293.5px;
 }
 
+.section{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-bottom: 8px;
+}
+
+.Ssection{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-bottom: 8px;
+    width: 550px;
+}
+
+#final{
+    width: 500px;
+}
+
+#fourth{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 2.5px;
+    margin-right: 2.5px;
+    width: 400px;
+    height: 293.5px;
+}
+
+#truck{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 2.5px;
+    margin-right: 2.5px;
+    width: 320px;
+    height: 280px;
+}
+
+#flats{
+    padding-left: 20px;
+}
 
 @media (max-width: 1170px) {
     body {
